# kv_storage

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: kv_storage.hpp
sources/: source.cpp
tests/: test.cpp
